SERVER-112409 Protect access to data members with a mutex. (#42586)

GitOrigin-RevId: d5fb609ef0bf6453a6a61d4c12cbb7716296deac